<resources>
    <string name="app_name">Embr</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send1">Item View</string>
    <string name="button_send2">Library</string>
    <string name="button_send3">Search Results</string>
    <string name="button_send4">Profile</string>
    <string name="button_send5">Recommended Items</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search_for__items">Search_for_Items</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="Search_Results_Item_Information">115dp</string>
    <string name="title_activity_item_view">ItemView</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_recommended_items">RecommendedItems</string>
    <string name="Genra">Genra:</string>
    <string name="title_activity_profile">Profile</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_comment_view">CommentView</string>
    <string name="owned_library">Owned</string>
    <string name="wishlist_library">Wishlist</string>
    <string name="custom_library">Custom</string>
    <string-array name="titles">
        <item>name 1</item>
        <item>name 2</item>
        <item>name 3</item>
    </string-array>
    <string name="title_activity_test_nav_bar">test_nav_bar</string>
    <string name="title_activity_login">Login</string>
    <string name="layout_name"></string>
<<<<<<< HEAD
    <string name="title_activity_sign_up">Sign_up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
=======
    <string name="menu_search">Search</string>
>>>>>>> d1766833ef3f35d042a24a05eb9ad5bbab6c5648
</resources>
